--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
 }
 
 /*=== Header ===*/
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -87,4 +86,12 @@ body {
   height: 60px;
   margin: 26px auto 0;
   background-color: #fff;
+}
+
+/*=== Video ===*/
+.video {
+  max-width: 1230px;
+  height: 750px;
+  width: 90%;
+  margin: auto;
 }
