--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,47 @@ body {
   width: 90%;
   margin: auto;
 }
+
+/*=== Features ===*/
+.features {
+  max-width: 1230px;
+  width: 90%;
+  margin: auto;
+  padding: 50px 0;
+}
+
+.features-title {
+  margin-top: 0;
+  margin-bottom: 45px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 34px;
+  text-transform: uppercase;
+}
+
+.table {
+  margin-bottom: 218px;
+}
+
+.table-column {
+  width: 300px;
+  padding: 7px 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 32px;
+}
+
+.english-unit {
+  color: #b2b0b2;
+}
+
+.features-text {
+  max-width: 490px;
+  margin-top: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 29px;
+}
