--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,10 @@ body {
 
 /*=== Features ===*/
 .features {
-  position: relative;
   max-width: 1230px;
   width: 90%;
   margin: auto;
-  padding: 250px 0 100px;
+  padding: 500px 0 100px;
 }
 
 .features-title {
@@ -113,6 +112,10 @@ body {
   font-size: 24px;
   line-height: 34px;
   text-transform: uppercase;
+}
+
+.overview {
+  position: relative;
 }
 
 .table {
@@ -143,7 +146,69 @@ body {
 
 .rocket {
   position: absolute;
-  top: 100px;
-  right: 0;
+  top: -250px;
+  right: 100px;
   z-index: 99;
+  max-height: 1700px;
+}
+
+/*=== Footer ===*/
+.footer {
+  padding: 130px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer .logo {
+  margin-bottom: 43px;
+}
+
+.footer .list {
+  margin-bottom: 28px;
+}
+
+.footer .item-link {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #ffffff;
+}
+
+.footer-text {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #808080;
+}
+
+.footer-link {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #808080;
+  text-decoration: none;
+}
+
+.button {
+  min-width: 260px;
+  min-height: 60px;
+  padding: 20px;
+
+  border: 2px solid #ffffff;
+  border-radius: 6px;
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
 }
