--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@ body {
   color: #ffffff;
 }
 
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 /*=== Header ===*/
-.header {
+.header-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1230px;
-  width: 90%;
+  width: 100%;
   margin: auto;
 }
 
@@ -53,7 +57,7 @@ body {
 }
 
 /*=== Main ===*/
-.main {
+.main-wrapper {
   padding-top: 120px;
   padding-bottom: 30px;
 }
@@ -89,17 +93,16 @@ body {
 }
 
 /*=== Video ===*/
-.video {
-  max-width: 1230px;
+.video-wrapper {
   height: 750px;
-  width: 90%;
+  width: 100%;
   margin: auto;
 }
 
 /*=== Features ===*/
-.features {
-  max-width: 1230px;
-  width: 90%;
+.overview {
+  position: relative;
+  width: 100%;
   margin: auto;
   padding: 500px 0 100px;
 }
@@ -112,10 +115,6 @@ body {
   font-size: 24px;
   line-height: 34px;
   text-transform: uppercase;
-}
-
-.overview {
-  position: relative;
 }
 
 .table {
@@ -153,7 +152,7 @@ body {
 }
 
 /*=== Footer ===*/
-.footer {
+.footer-wrapper {
   padding: 130px 0;
   display: flex;
   align-items: center;
@@ -213,8 +212,14 @@ body {
   cursor: pointer;
 }
 /*=== Media ===*/
+@media (max-width: 1200px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
 @media (max-width: 960px) {
-  .features {
+  .overview {
     padding: 200px 0 0;
   }
   .rocket {
@@ -231,7 +236,7 @@ body {
 }
 
 @media (max-width: 768px) {
-  .header {
+  .header-wrapper {
     flex-direction: column;
     align-items: center;
   }
@@ -248,16 +253,13 @@ body {
   .rocket {
     max-width: 150px;
   }
-  .video {
-    width: 100%;
-  }
 }
 
 @media (max-width: 576px) {
-  .main {
+  .main-wrapper {
     padding-top: 60px;
   }
-  .features {
+  .overview {
     padding: 0;
   }
   .features-title {
@@ -276,7 +278,7 @@ body {
     position: static;
     margin-bottom: 20px;
   }
-  .footer {
+  .footer-wrapper {
     padding: 60px 0;
   }
   .footer-nav .list {
